tests/invalidprograms/semantic/void_function.tds
Program {
	void f(Int x) {

	}

	void main() {
		Int x = 1 + f(1);
	}
}

